// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Heading Heading 1`] = `
<div
  className="chakra-stack css-wulyol"
>
  <div
    className="css-gmuwbf"
  >
    <h1
      className="chakra-heading css-zdriq2"
    >
      Photo
      <span
        className="chakra-heading css-62np59"
      >
        wall
      </span>
    </h1>
  </div>
  <div
    className="css-gmuwbf"
  >
    <h2
      className="chakra-heading css-r3wqqr"
    >
      Photo
      <span
        className="chakra-heading css-13unv4c"
      >
        wall
      </span>
    </h2>
  </div>
</div>
`;

exports[`Storyshots Common/Heading Interactive Heading 1`] = `
<div
  className="css-gmuwbf"
>
  <h1
    className="chakra-heading css-zdriq2"
  >
    Photo
    <span
      className="chakra-heading css-62np59"
    >
      wall
    </span>
  </h1>
</div>
`;
